' diagram-type: state-machine
@startuml
!pragma layout smetana
title v0002 State Registry - Task Lifecycle State Machine

note as ConcreteNaming
  Concrete Executor services follow the platform naming convention
  documented in AGENTS.md:
    executor_<runtime>_<tool>
  Current concrete Executor: executor_docker_openhands
  (runtime = docker, tool = openhands; "openhands" is the service
  identifier; the external product spelling "OpenHands" stays
  unchanged). The state machine below is generic over every concrete
  Executor under the executor_<runtime>_<tool> family.
end note

state "pending" as Pending
state "created" as Created
state "running" as Running
state "finished" as Finished
state "failed" as Failed

[*] --> Pending : Registry\nlistener authorized for team + source_system\nINSERT pending task; NO event\nSET ingested_at = now() (immutable)

Pending --> Created : Executor claims oldest eligible pending\nSET owner_command_id + executor_id (immutable)\nSET resolved_image + image_source from four-level precedence\nSET claimed_at\nAPPEND FIRST 'created' event (executor_id = claimant,\npayload 'task <task_id> loaded by <executor_id>')\ncurrent_state = created

Created --> Running : Executor\nINSERT 'running'\nenvelope team_id matches
Running --> Finished : Executor\nINSERT 'finished'
Running --> Failed : Executor\nINSERT 'failed'
Finished --> [*]
Failed --> [*]

note right of Pending
  Immutable team_id, source_system_id, source_id.
  ingested_at set once. No events.
  owner_command_id NULL; executor_id NULL.
end note

note right of Created
  FIRST event Registry-appended at claim.
  executor_id identifies claiming Executor.
  payload encodes assignment.
  No 'dispatched' event ever exists.
end note

note right of Running
  Envelope team_id = Executor team (team-owned)
  OR parent task team_id (system-owned).
  Strict (occurred_at, event_id) ordering.
end note

note as Invariants
  Reject without append or projection change:
  - running/finished/failed before created
  - any event after terminal state
  - claim not on oldest eligible pending (409 older_task_must_be_claimed_first)
  - claim of already-claimed task with different command_id (409 task_already_claimed)
  - unassigned Executor (403 not_assigned)
  - envelope team_id mismatch (403 team_mismatch)
  - foreign point identifier (404)
  - non-increasing ordering tuple
  - caller-supplied accepted_sequence
end note

note as Image
  Four-level precedence at claim:
  tasks.image -> task_types.default_image
  -> source_systems.default_image
  -> teams.default_image (REQUIRED, always resolves).
  Image strings are NOT team-owned;
  image equality across teams grants NO authority.
  Executor uses resolved_image verbatim
  (no local fallback).
end note

note as ExecutorScope
  scope = team: same team + tag FIFO,
  envelope team_id verified against authenticated Executor.
  scope = system: tag-only FIFO across teams,
  envelope team_id verified against parent task team_id.
  Scope immutable from registration.
end note

@enduml
